# NewDeployClient

./: .gitignore  CMakeLists.txt  DeployFiles.cpp  HandleCourse.cpp  HandleDisk.cpp  Header.h  MyLog.cpp  MyLog.h  MyThread.cpp  MyThread.h  MyTime.cpp  MyTime.h  NewDeployClient.cpp  NewDeployClient.vcxproj  NewDeployClient.vcxproj.filters  README.md  RUtil.cpp  RUtil.h  RecvCommand.cpp  RecvServiceMulticast.cpp  ScanFiles.cpp  SendHeart.cpp  config.txt  global.cpp  global.h  md5.cpp  md5.h  modify.txt  socket.cpp  socket.h  stringz.cpp  stringz.h
